# trustvla-project

./: .dockerignore  .gitignore  README.md  README_kor.md  pyproject.toml
.github/workflows/: build-runpod-image.yml
data/: safety_policies.json  seed_tasks.json
docker/: Dockerfile.runpod  requirements-libero-no-vla-conflict.txt  requirements-openvla-runtime.txt  start-trustvla.sh  verify_runtime.py
docs/: datasets.md  development_status_ko.md  instruction_variation_rules.md  libero_openvla_rollout.md  paper_mvp.md  related_work_2026.md  runpod_4090_quickstart.md  runpod_connection_notes.md  runpod_docker_image.md  runpod_hf_workflow.md  runpod_setup_ko.md  what_to_run.md
notebooks/: runpod_libero_openvla.ipynb
src/trustvla/: __init__.py  adapters.py  cli.py  detectors.py  hf_datasets.py  io.py  metrics.py  paired_metrics.py  perturbations.py  report.py  safety_gate.py  schema.py  tradeoff_metrics.py  validation.py  verifier.py
src/trustvla/integrations/: __init__.py  libero_openvla.py
tests/: test_detectors.py  test_hf_datasets.py  test_libero_openvla_integration.py  test_metrics.py  test_paired_metrics.py  test_perturbations.py  test_safety_gate.py  test_tradeoff_metrics.py  test_validation.py  test_verifier.py
