[project]
name = "trustvla"
version = "0.2.0"
description = "Selective-obedience evaluation and trusted-policy gating for VLA policies."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
trustvla = "trustvla.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
